Testing with multiple creatures

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -6,8 +6,10 @@
   background-color: transparent;
   position: absolute;
   left: 0;
-  top: 49%;
+  top: 0;
   visibility: visible;
+  text-align: center;
+  line-height: 25px;
 }
 
 .hidden {
