--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -1,3 +1,46 @@
+@import "./fonts.less";
+
+body {
+  margin: 0;
+  font-family: 'BasisGrotesque', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  font-weight: lighter;
+  margin: 0;
+}
+
+h1.garden-heading {
+  font-size: 15.5vw;
+}
+
+.garden-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  &.alpha {
+    color: #DDFFDD;
+    // background-color: #F2F2F2;
+  }
+  &.beta {
+    color: #FFDDDD;
+    // background-color: #F2F2F2;
+  }
+  &.gamma {
+    color: #DDDDFF;
+    // background-color: #F2F2F2;
+  }
+}
+
 .creature {
   width: 150px;
   height: 35px;
