--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -5,6 +5,8 @@ body {
   font-family: 'BasisGrotesque', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 h1 {
