Touching makes rain

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -114,7 +114,17 @@ h1.garden-heading {
   left: 0;
 }
 
-.rain-particle-system {
+.decentralized-animation {
   width: 100vw;
   height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.rain-particle-system {
+}
+
+.plant-container {
+  position: absolute;
 }
