--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -24,21 +24,21 @@ h1.garden-heading {
   left: 0;
   width: 100vw;
   height: 100vh;
-  text-align: center;
+  text-align: left;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   &.alpha {
-    color: #DDFFDD;
+    color: #AAAAAA;
     // background-color: #F2F2F2;
   }
   &.beta {
-    color: #FFDDDD;
+    color: #AAAAAA;
     // background-color: #F2F2F2;
   }
   &.gamma {
-    color: #DDDDFF;
+    color: #AAAAAA;
     // background-color: #F2F2F2;
   }
 }
@@ -127,4 +127,5 @@ h1.garden-heading {
 
 .plant-container {
   position: absolute;
+  transform: translateX(-50%) translateY(-50%);
 }
