--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -2,11 +2,15 @@
 
 body {
   margin: 0;
+  position: relative;
   font-family: 'BasisGrotesque', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
+  max-height: 80vh;
   overflow: hidden;
+  -webkit-user-select: none !important;
+  -webkit-touch-callout: none !important;
 }
 
 h1 {
@@ -23,7 +27,7 @@ h1.garden-heading {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -85,7 +89,7 @@ h1.garden-heading {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
 
   .creature-birth-image {
     max-width: 80vw;
@@ -116,7 +120,8 @@ h1.garden-heading {
 
 .decentralized-animation {
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
+  overflow: hidden;
   position: absolute;
   left: 0;
   top: 0;
