--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -1,5 +1,7 @@
 @import "./fonts.less";
 
+@maxHeight: 85vh;
+
 body {
   margin: 0;
   position: relative;
@@ -7,7 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
-  max-height: 80vh;
+  max-height: @maxHeight;
   overflow: hidden;
   -webkit-user-select: none !important;
   -webkit-touch-callout: none !important;
@@ -27,7 +29,7 @@ h1.garden-heading {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 80vh;
+  height: @maxHeight;
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -89,7 +91,7 @@ h1.garden-heading {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 80vh;
+  height: @maxHeight;
 
   .creature-birth-image {
     max-width: 80vw;
@@ -120,7 +122,7 @@ h1.garden-heading {
 
 .decentralized-animation {
   width: 100vw;
-  height: 80vh;
+  height: @maxHeight;
   overflow: hidden;
   position: absolute;
   left: 0;
