--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -118,6 +118,7 @@ h1.garden-heading {
   position: fixed;
   top: 0;
   left: 0;
+  visibility: hidden;
 }
 
 .decentralized-animation {
@@ -135,4 +136,36 @@ h1.garden-heading {
 .plant-container {
   position: absolute;
   transform: translateX(-50%) translateY(-50%);
+}
+
+.reversed-x {
+  transform: scale(-1, 1);
+}
+
+.creature-1 {
+  transform: scale(2, 2);
+}
+
+.creature-2 {
+  transform: scale(1.1, 1.1);
+}
+
+.creature-3 {
+  transform: scale(0.7, 0.7);
+}
+
+.creature-4 {
+  transform: scale(1.5, 1.5);
+}
+
+.creature-5 {
+  transform: scale(2.2, 2.2);
+}
+
+.creature-6 {
+  transform: scale(1, 1);
+}
+
+.creature-7 {
+  transform: scale(1.4, 1.4);
 }
