--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -1,18 +1,38 @@
-@import "./fonts.less";
-
 @maxHeight: 85vh;
 
 body {
   margin: 0;
   position: relative;
-  font-family: 'BasisGrotesque', sans-serif;
+  font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
   max-height: @maxHeight;
   overflow: hidden;
   -webkit-user-select: none !important;
+  -khtml-user-select: none !important;
+  -moz-user-select: none !important;
+  -o-user-select: none !important;
+  user-select: none !important;
   -webkit-touch-callout: none !important;
+}
+
+img{
+  -khtml-user-select: none;
+  -o-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+img::-moz-selection {
+  background-color: transparent;
+  color: #000;
+}
+
+img::selection {
+  background-color: transparent;
+  color: #000;
 }
 
 h1 {
@@ -51,17 +71,11 @@ h1.garden-heading {
 
 .creature {
   width: 150px;
-  height: 35px;
-  border: 0px solid black;
-  border-radius: ~"100px / 70px";
-  background-color: transparent;
+  height: 100vh;
   position: absolute;
   left: 0;
   top: 0;
   visibility: visible;
-  text-align: center;
-  cursor: pointer;
-  // line-height: 25px;
 }
 
 .hidden {
@@ -118,7 +132,7 @@ h1.garden-heading {
   position: fixed;
   top: 0;
   left: 0;
-  visibility: hidden;
+  visibility: visible;
 }
 
 .decentralized-animation {
