Fixed scrolling issue

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -1,8 +1,8 @@
-@maxHeight: 85vh;
+@maxHeight: 100vh;
 
 body {
   margin: 0;
-  position: relative;
+  position: fixed;
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
