--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -132,7 +132,7 @@ h1.garden-heading {
   position: fixed;
   top: 0;
   left: 0;
-  visibility: visible;
+  visibility: hidden;
 }
 
 .decentralized-animation {
