--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -197,3 +197,13 @@ h1.garden-heading {
   font-size: 8pt;
   opacity: 0;
 }
+
+.creature-code-input {
+  font-family: 'Courier New', Courier, monospace;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: 50px;
+  background-color: red;
+}
