Basic prototype working

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -198,12 +198,31 @@ h1.garden-heading {
   opacity: 0;
 }
 
-.creature-code-input {
+.creature-code-input-container {
   font-family: 'Courier New', Courier, monospace;
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100vw;
   height: 50px;
-  background-color: red;
+  border-top: 1px solid #AAC;
+
+  input {
+    width: 100%;
+    height: 56px;
+    position: relative;
+    padding: 0px 16px;
+    border: none;
+    border-radius: 4px;
+    font-family: 'Gotham SSm A', 'Gotham SSm B', sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: normal;
+    background-color: transparent;
+    color: #282828;
+    outline: none;
+    box-shadow: 0px 4px 20px 0px transparent;
+    transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out, 0.1s padding ease-in-out;
+    -webkit-appearance: none;
+  }
 }
