--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -197,3 +197,14 @@ h1.garden-heading {
   font-size: 8pt;
   opacity: 0;
 }
+
+.seeds-collection {
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 10vh;
+  border-top: 1px dashed rgba(255, 0, 255, 0.1);
+  background-color: rgba(255, 0, 255, 0.05);
+}
