Messaging infrastructure functional

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -71,7 +71,7 @@ h1.garden-heading {
 
 .creature {
   width: 150px;
-  height: 100vh;
+  // height: 100vh;
   position: absolute;
   left: 0;
   top: 0;
@@ -208,7 +208,7 @@ h1.garden-heading {
   border-top: 1px solid #AAC;
 
   input {
-    width: 100%;
+    width: 95%;
     height: 56px;
     position: relative;
     padding: 0px 16px;
@@ -225,4 +225,15 @@ h1.garden-heading {
     transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out, 0.1s padding ease-in-out;
     -webkit-appearance: none;
   }
+}
+
+.creature-message-container {
+    margin-bottom: 75px;
+    margin-top: -150px;
+    border: 1px dashed black;
+    padding: 30px;
+    border-radius: 50px 50px 50px 50px;
+    min-width: 250px;
+    background: white;
+    overflow: hidden;
 }
