--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -2,13 +2,13 @@
 
 body {
   margin: 0;
-  position: fixed;
+  // position: fixed;
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
   max-height: @maxHeight;
-  overflow: hidden;
+  overflow-x: hidden;
   -webkit-user-select: none !important;
   -khtml-user-select: none !important;
   -moz-user-select: none !important;
@@ -214,7 +214,6 @@ h1.garden-heading {
     padding: 0px 16px;
     border: none;
     border-radius: 4px;
-    font-family: 'Gotham SSm A', 'Gotham SSm B', sans-serif;
     font-size: 13px;
     font-weight: 400;
     line-height: normal;
@@ -228,6 +227,7 @@ h1.garden-heading {
 }
 
 .creature-message-container {
+    text-align: center;
     margin-bottom: 75px;
     margin-top: -150px;
     border: 1px dashed black;
@@ -236,4 +236,21 @@ h1.garden-heading {
     min-width: 250px;
     background: white;
     overflow: hidden;
+}
+
+.poem-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  .poem-creature-container {
+    max-width: 200px;
+    margin-top: 30px;
+  }
+
+  .poem-content-container {
+    max-width: 66vw;
+    text-align: center;
+  }
 }
