Padding for poem page

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -250,7 +250,9 @@ h1.garden-heading {
   }
 
   .poem-content-container {
+    margin-top: 35px;
+    margin-bottom: 35px;
     max-width: 66vw;
-    text-align: center;
+    text-align: center;    
   }
 }
