--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -228,14 +228,13 @@ h1.garden-heading {
 
 .creature-message-container {
     text-align: center;
-    margin-bottom: 75px;
-    margin-top: -150px;
+    margin-top: -100px;
     border: 1px dashed black;
-    padding: 30px;
+    padding: 20px;
     border-radius: 50px 50px 50px 50px;
-    min-width: 250px;
     background: white;
     overflow: hidden;
+    word-wrap: anywhere;
 }
 
 .poem-container {
