--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -74,7 +74,7 @@ h1.garden-heading {
   // height: 100vh;
   position: absolute;
   left: 0;
-  top: 0;
+  bottom: 80%;
   visibility: visible;
 }
 
@@ -217,7 +217,7 @@ h1.garden-heading {
     font-size: 13px;
     font-weight: 400;
     line-height: normal;
-    background-color: transparent;
+    background-color: white;
     color: #282828;
     outline: none;
     box-shadow: 0px 4px 20px 0px transparent;
@@ -227,14 +227,29 @@ h1.garden-heading {
 }
 
 .creature-message-container {
-    text-align: center;
+    position: relative;
     margin-top: -100px;
-    border: 1px dashed black;
-    padding: 20px;
-    border-radius: 50px 50px 50px 50px;
-    background: white;
-    overflow: hidden;
+    margin-left: 50px;
+    margin-right: -50px;
+    width: 200px;
+    padding: 25px;
+    border: 1px solid rgba(47, 66, 85, 1);
+    border-radius: 100%;
+    background: white;    
+    text-align: center;
+    font-size: 9pt;
+    color: rgba(47, 66, 85, 1);
     word-wrap: anywhere;
+
+    .creature-message-line {
+      width: 50px;
+      height: 50px;
+      border-radius: 50px;
+      border-right: 7px dotted rgba(47, 66, 85, 1);
+      position: absolute;
+      bottom: 0;
+      transform: translateY(50%) rotate(45deg) translateX(50%);
+    }
 }
 
 .poem-container {
@@ -243,6 +258,7 @@ h1.garden-heading {
   justify-content: center;
   align-items: center;
   width: 100vw;
+
   .poem-creature-container {
     max-width: 200px;
     margin-top: 30px;
