--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -241,6 +241,14 @@ h1.garden-heading {
     color: rgba(47, 66, 85, 1);
     word-wrap: anywhere;
 
+    transition: opacity 1s;
+    opacity: 1;
+
+    &.hidden {
+      transition: opacity 1s;
+      opacity: 0;
+    }
+
     .creature-message-line {
       width: 50px;
       height: 50px;
