--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -205,7 +205,8 @@ h1.garden-heading {
   left: 0;
   width: 100vw;
   height: 50px;
-  border-top: 1px solid #AAC;
+  border-top: 1px solid rgba(47, 66, 85, 1);
+  color: rgba(47, 66, 85, 1);
 
   input {
     width: 95%;
@@ -270,7 +271,7 @@ h1.garden-heading {
       }
 
       &.third {
-        transform: translateY(-60%) rotate(45deg) translateX(250%);
+        transform: translateY(-60%) rotate(45deg) translateX(275%);
         width: 20px;
         height: 20px;
         border-radius: 20px;  
