--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -159,6 +159,9 @@ h1.garden-heading {
 
 .creature-1 {
   transform: scale(2, 2);
+  @media screen and (max-width: 600px) {
+    transform: scale(0.8, 0.8);
+  }
 }
 
 .creature-2 {
@@ -171,10 +174,16 @@ h1.garden-heading {
 
 .creature-4 {
   transform: scale(1.5, 1.5);
+  @media screen and (max-width: 600px) {
+    transform: scale(1.15, 1.15);
+  }
 }
 
 .creature-5 {
   transform: scale(2.2, 2.2);
+  @media screen and (max-width: 600px) {
+    transform: scale(0.75, 0.75);
+  }
 }
 
 .creature-6 {
@@ -183,6 +192,9 @@ h1.garden-heading {
 
 .creature-7 {
   transform: scale(1.4, 1.4);
+  @media screen and (max-width: 600px) {
+    transform: scale(0.9, 0.9);
+  }
 }
 
 .creature-8 {
