--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -2,7 +2,6 @@
 
 body {
   margin: 0;
-  // position: fixed;
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -15,6 +14,10 @@ body {
   -o-user-select: none !important;
   user-select: none !important;
   -webkit-touch-callout: none !important;
+
+  &.pos-fixed {
+    position: fixed;
+  }
 }
 
 img{
