Small visual fixes; larger smallest creatures

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -77,7 +77,7 @@ h1.garden-heading {
   // height: 100vh;
   position: absolute;
   left: 0;
-  bottom: 80%;
+  bottom: -100px;
   visibility: visible;
 }
 
@@ -172,7 +172,7 @@ h1.garden-heading {
 }
 
 .creature-3 {
-  transform: scale(0.7, 0.7);
+  transform: scale(0.85, 0.85);
 }
 
 .creature-4 {
@@ -201,7 +201,7 @@ h1.garden-heading {
 }
 
 .creature-8 {
-  transform: scale(0.65, 0.65);
+  transform: scale(0.75, 0.75);
 }
 
 .invisible-text-container {
